# zenode

./: CHANGELOG.md  Cargo.toml  ENCODE-PATHS.md  README.md  SPEC.md
.github/workflows/: ci.yml
zennode/: Cargo.toml
zennode-derive/: Cargo.toml
zennode-derive/src/: attrs.rs  lib.rs  node.rs
zennode/src/: error.rs  json_schema.rs  kv.rs  lib.rs  registry.rs  schema.rs  serde_impl.rs
zennode/tests/: derive_node.rs
zenode/: Cargo.toml
zenode-derive/: Cargo.toml
zenode-derive/src/: attrs.rs  codegen.rs  lib.rs  node.rs  node_enum.rs
zenode/src/: error.rs  format.rs  json_schema.rs  kv.rs  lib.rs  nodes.rs  ordering.rs  param.rs  registry.rs  schema.rs  serde_impl.rs  traits.rs  version.rs
zenode/tests/: derive_enum.rs  derive_node.rs  shared_nodes.rs
