[package]
name = "zennode"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "Self-documenting node definitions for image processing pipelines"
readme = "../README.md"
repository = "https://github.com/imazen/zennode"
keywords = ["image", "pipeline", "node", "schema"]
categories = ["multimedia::images"]

[features]
default = ["std", "derive"]
std = []
derive = ["dep:zennode-derive"]
serde = ["dep:serde", "dep:serde_json", "std"]
json-schema = ["serde"]

[dependencies]
zennode-derive = { version = "0.1.0", path = "../zennode-derive", optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1.0.149", optional = true }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
