[package]
name = "zenode"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "Self-documenting node definitions for image processing pipelines"

[features]
default = ["std", "derive"]
std = []
derive = ["dep:zenode-derive"]
serde = ["dep:serde", "dep:serde_json", "std"]
json-schema = ["serde"]

[dependencies]
zenode-derive = { version = "0.1", path = "../zenode-derive", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1", optional = true }
